--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
+  "homepage": "https://IslamovShm.github.io/Pizza",
   "name": "pizza",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@types/react-transition-group": "^4.4.10",
     "classnames": "^2.5.1",
@@ -17,6 +18,8 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-app-rewired build",
     "eject": "react-scripts eject"
   },
